--- a/archive.html
+++ b/archive.html
@@ -65,14 +65,19 @@
 	    Архив
 	  </div>
 
-	  <a style="display: inline; padding: 0px 0px 0px 0px;"  
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="1/comic.png" data-lightbox="comic" data-title="Daria 2016"
 	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 title="Daria 2016" alt="Daria 2016" />
 	  </a>
+          <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее"
 	     rel="lightbox[comic]">
@@ -80,6 +85,8 @@
 			 width="140px;"
 			 title="Окололетнее" alt="Окололетнее" />
 	  </a>
+          <!-- Kонец новой ссылки -->
+
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
@@ -91,7 +98,8 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
-		   <!-- Начало новой ссылки -->
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="4/comic.png" data-lightbox="comic" data-title="А."
 	     rel="lightbox[comic]">
@@ -100,7 +108,9 @@
 			 title="А." alt="А." />
 	  </a>
           <!-- Kонец новой ссылки -->
- <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="5/comic.png" data-lightbox="comic" data-title="Случай в Мадриде"
 	     rel="lightbox[comic]">
@@ -110,7 +120,8 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
-<!-- Начало новой ссылки -->
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="6/comic.png" data-lightbox="comic" data-title="По дороге"
 	     rel="lightbox[comic]">
@@ -119,7 +130,9 @@
 			 title="По дороге" alt="По дороге" />
 	  </a>
           <!-- Kонец новой ссылки -->
-		  <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="7/comic.png" data-lightbox="comic" data-title="Ведьма"
 	     rel="lightbox[comic]">
@@ -128,7 +141,9 @@
 			 title="Ведьма" alt="Ведьма" />
 	  </a>
           <!-- Kонец новой ссылки -->
-		  	  <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="8/comic.png" data-lightbox="comic" data-title="Фонари зажигаются"
 	     rel="lightbox[comic]">
@@ -137,7 +152,9 @@
 			 title="Фонари зажигаются" alt="Фонари зажигаются" />
 	  </a>
           <!-- Kонец новой ссылки -->
-		  <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="9/comic.png" data-lightbox="comic" data-title="Март"
 	     rel="lightbox[comic]">
@@ -146,7 +163,9 @@
 			 title="Март" alt="Март" />
 	  </a>
           <!-- Kонец новой ссылки -->
-		  <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="10/comic.png" data-lightbox="comic" data-title="Часы"
 	     rel="lightbox[comic]">
@@ -155,7 +174,9 @@
 			 title="Часы" alt="Часы" />
 	  </a>
           <!-- Kонец новой ссылки -->
-		    <!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="11/comic.png" data-lightbox="comic" data-title="Городская геодезия"
 	     rel="lightbox[comic]">
@@ -164,7 +185,9 @@
 			 title="Городская геодезия" alt="Городская геодезия" />
 	  </a>
           <!-- Kонец новой ссылки -->
-			<!-- Начало новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="12/comic.png" data-lightbox="comic" data-title="На работу"
 	     rel="lightbox[comic]">
@@ -172,8 +195,10 @@
 			 width="140px;"
 			 title="На работу" alt="На работу" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-					<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="13/comic.png" data-lightbox="comic" data-title="Друзья"
 	     rel="lightbox[comic]">
@@ -181,8 +206,10 @@
 			 width="140px;"
 			 title="Друзья" alt="Друзья" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-			<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="14/comic.png" data-lightbox="comic" data-title="Рынок"
 	     rel="lightbox[comic]">
@@ -190,8 +217,10 @@
 			 width="140px;"
 			 title="Рынок" alt="Рынок" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-			<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="15/comic.png" data-lightbox="comic" data-title="The Jerk"
 	     rel="lightbox[comic]">
@@ -199,8 +228,10 @@
 			 width="140px;"
 			 title="The Jerk" alt="The Jerk" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-					<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="16/comic.png" data-lightbox="comic" data-title="В городе моем"
 	     rel="lightbox[comic]">
@@ -208,8 +239,10 @@
 			 width="140px;"
 			 title="В городе моем" alt="В городе моем" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-					<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="17/comic.png" data-lightbox="comic" data-title="Ботинки, мечтающие о чашке чая"
 	     rel="lightbox[comic]">
@@ -217,8 +250,10 @@
 			 width="140px;"
 			 title="Ботинки, мечтающие о чашке чая" alt="Ботинки, мечтающие о чашке чая" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-		<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="18/comic.png" data-lightbox="comic" data-title="Мумий Тролль"
 	     rel="lightbox[comic]">
@@ -226,8 +261,10 @@
 			 width="140px;"
 			 title="Мумий Тролль" alt="Мумий Тролль" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-			<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="19/comic.png" data-lightbox="comic" data-title="Москва-река"
 	     rel="lightbox[comic]">
@@ -235,8 +272,10 @@
 			 width="140px;"
 			 title="Москва-река" alt="Москва-река" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-			<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="20/comic.png" data-lightbox="comic" data-title="Зима уходит"
 	     rel="lightbox[comic]">
@@ -244,8 +283,10 @@
 			 width="140px;"
 			 title="Зима уходит" alt="Зима уходит" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-	<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="21/comic.png" data-lightbox="comic" data-title="Meryl"
 	     rel="lightbox[comic]">
@@ -253,10 +294,10 @@
 			 width="140px;"
 			 title="Meryl" alt="Meryl" />
 	  </a>
-            <!-- Kонец новой ссылки -->
+          <!-- Kонец новой ссылки -->
 
-			       <!-- Kонец новой ссылки -->
-	<!-- Начало новой ссылки -->
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="22/comic.png" data-lightbox="comic" data-title="Флейтистка"
 	     rel="lightbox[comic]">
@@ -264,8 +305,10 @@
 			 width="140px;"
 			 title="Флейтистка" alt="Флейтистка" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-	<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="23/comic.png" data-lightbox="comic" data-title="Китайская фантазия"
 	     rel="lightbox[comic]">
@@ -273,8 +316,10 @@
 			 width="140px;"
 			 title="Китайская фантазия" alt="Китайская фантазия" />
 	  </a>
-            <!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="24/comic.png" data-lightbox="comic" data-title="Размытый город"
 	     rel="lightbox[comic]">
@@ -282,8 +327,10 @@
 			 width="140px;"
 			 title="Размытый город" alt="Размытый город" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="25/comic.png" data-lightbox="comic" data-title="Качели"
 	     rel="lightbox[comic]">
@@ -291,8 +338,10 @@
 			 width="140px;"
 			 title="Качели" alt="Качели" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="26/comic.png" data-lightbox="comic" data-title="Средиземноморье"
 	     rel="lightbox[comic]">
@@ -300,8 +349,10 @@
 			 width="140px;"
 			 title="Средиземноморье" alt="Средиземноморье" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="27/comic.png" data-lightbox="comic" data-title="Конец марта"
 	     rel="lightbox[comic]">
@@ -309,8 +360,10 @@
 			 width="140px;"
 			 title="Конец марта" alt="Конец марта" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="28/comic.png" data-lightbox="comic" data-title="Depeche Mode"
 	     rel="lightbox[comic]">
@@ -318,8 +371,10 @@
 			 width="140px;"
 			 title="Depeche Mode" alt="Depeche Mode" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="29/comic.png" data-lightbox="comic" data-title="До Драмтеатра"
 	     rel="lightbox[comic]">
@@ -327,8 +382,10 @@
 			 width="140px;"
 			 title="До Драмтеатра" alt="До Драмтеатра" />
 	  </a>
-<!-- Kонец новой ссылки -->
-<!-- Начало новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="30/comic.png" data-lightbox="comic" data-title="Мост"
 	     rel="lightbox[comic]">
@@ -336,7 +393,10 @@
 			 width="140px;"
 			 title="Мост" alt="Мост" />
 	  </a>
-<!-- Kонец новой ссылки -->
+          <!-- Kонец новой ссылки -->
+
+	  <!-- ig271828_archive -->
+
 	  <hr>
 
 	  <br />
@@ -350,3 +410,13 @@
     <script src="javascripts/lightbox-plus-jquery.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
