--- a/random.html
+++ b/random.html
@@ -13,36 +13,37 @@
   	ga('send', 'pageview');
     </script>
     <script type="text/javascript">
-      var urls = new Array("http://indiangeogra.github.io/1", 
+      var urls = new Array("http://indiangeogra.github.io/1",
+                           "http://indiangeogra.github.io/1",
                            "http://indiangeogra.github.io/2",
-			   "http://indiangeogra.github.io/3", 
-			   "http://indiangeogra.github.io/4",
-			   "http://indiangeogra.github.io/5",
-			   "http://indiangeogra.github.io/6",
-			   "http://indiangeogra.github.io/7",
-			   "http://indiangeogra.github.io/8",
-			   "http://indiangeogra.github.io/9",
-			   "http://indiangeogra.github.io/10",
-			   "http://indiangeogra.github.io/11",
-			   "http://indiangeogra.github.io/12",
-			   "http://indiangeogra.github.io/13",
-			   "http://indiangeogra.github.io/14",
-			   "http://indiangeogra.github.io/15",
-			   "http://indiangeogra.github.io/16",
-			   "http://indiangeogra.github.io/17",
-			   "http://indiangeogra.github.io/18",
-			   "http://indiangeogra.github.io/19",
-			   "http://indiangeogra.github.io/20",
-			   "http://indiangeogra.github.io/21",
-			   "http://indiangeogra.github.io/22",
-			   "http://indiangeogra.github.io/23",
-			   "http://indiangeogra.github.io/24",
-			   "http://indiangeogra.github.io/25",
-			   "http://indiangeogra.github.io/26",
-			   "http://indiangeogra.github.io/27",
-			   "http://indiangeogra.github.io/28",
-			   "http://indiangeogra.github.io/29",
-			   "http://indiangeogra.github.io/30");
+                           "http://indiangeogra.github.io/3",
+                           "http://indiangeogra.github.io/4",
+                           "http://indiangeogra.github.io/5",
+                           "http://indiangeogra.github.io/6",
+                           "http://indiangeogra.github.io/7",
+                           "http://indiangeogra.github.io/8",
+                           "http://indiangeogra.github.io/9",
+                           "http://indiangeogra.github.io/10",
+                           "http://indiangeogra.github.io/11",
+                           "http://indiangeogra.github.io/12",
+                           "http://indiangeogra.github.io/13",
+                           "http://indiangeogra.github.io/14",
+                           "http://indiangeogra.github.io/15",
+                           "http://indiangeogra.github.io/16",
+                           "http://indiangeogra.github.io/17",
+                           "http://indiangeogra.github.io/18",
+                           "http://indiangeogra.github.io/19",
+                           "http://indiangeogra.github.io/20",
+                           "http://indiangeogra.github.io/21",
+                           "http://indiangeogra.github.io/22",
+                           "http://indiangeogra.github.io/23",
+                           "http://indiangeogra.github.io/24",
+                           "http://indiangeogra.github.io/25",
+                           "http://indiangeogra.github.io/26",
+                           "http://indiangeogra.github.io/27",
+                           "http://indiangeogra.github.io/28",
+                           "http://indiangeogra.github.io/29",
+                           "http://indiangeogra.github.io/30"<!-- ig271828_random -->); 
       window.location.href = urls[Math.floor(urls.length*Math.random())];
    </script>
 </head>
