--- a/scripts/example_index.html
+++ b/scripts/example_index.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = 'http://indiangeogra.github.io24';
+      window.location.href = 'http://indiangeogra.github.ioig271828_prev_nr';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'http://indiangeogra.github.io26';
+      window.location.href = 'http://indiangeogra.github.ioig271828_next_nr';
       });
     </script>
 
@@ -44,7 +44,7 @@
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Качели</title>
+    <title>indian geogra: ig271828_name</title>
     
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -79,34 +79,34 @@
 
 
           <div id="ComicTitle">
-	    Качели
+	    ig271828_name
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../24/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../ig271828_prev_nr/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../26/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../ig271828_next_nr/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	  <center>
 	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
-	       href="https://indiangeogra.github.io/25/comic.png">
-	      <img src="https://indiangeogra.github.io/25/comic_lazy.png"
-		   width="620px"
-		   data-src="https://indiangeogra.github.io/25/comic_small.png"
+	       href="https://indiangeogra.github.io/ig271828_nr/comic.png">
+	      <img src="https://indiangeogra.github.io/ig271828_nr/comic_lazy.png"
+		   width="ig271828_width"
+		   data-src="https://indiangeogra.github.io/ig271828_nr/comic_small.png"
 		   class="lazyload blur-up"
-		   title="150324" alt="Качели " class="lazyload no-src" />
+		   title="ig271828_data" alt="ig271828_name " class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../24/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../ig271828_prev_nr/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../26/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../ig271828_next_nr/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
@@ -143,8 +143,8 @@
 	    <center>
 	      <br />
 	      <div style="color: #333">
-		Сослать в наш красный уголок: http://indiangeogra.github.io/25/index.html<br />
-		Стянуть картинку: http://indiangeogra.github.io/25/comic.png
+		Сослать в наш красный уголок: http://indiangeogra.github.io/ig271828_nr/index.html<br />
+		Стянуть картинку: http://indiangeogra.github.io/ig271828_nr/comic.png
 	      </div>
 	    </center>
           </footer>
