--- a/scripts/example_random.html
+++ b/scripts/example_random.html
@@ -13,7 +13,7 @@
   	ga('send', 'pageview');
     </script>
     <script type="text/javascript">
-      var urls = new Array("http://indiangeogra.github.io/1"<!-- ig271828_random -->); 
+      var urls = new Array("http://indiangeogra.github.io/1"/*<!-- ig271828_random -->*/); 
       window.location.href = urls[Math.floor(urls.length*Math.random())];
    </script>
 </head>
