--- a/random.html
+++ b/random.html
@@ -42,7 +42,7 @@
                            "http://indiangeogra.github.io/27",
                            "http://indiangeogra.github.io/28",
                            "http://indiangeogra.github.io/29",
-                           "http://indiangeogra.github.io/30"<!-- ig271828_random -->); 
+                           "http://indiangeogra.github.io/30"/*<!-- ig271828_random -->*/); 
       window.location.href = urls[Math.floor(urls.length*Math.random())];
    </script>
 </head>
