--- a/7/index.html
+++ b/7/index.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = 'http://indiangeogra.github.io6';
+      window.location.href = 'http://indiangeogra.github.io/6';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'http://indiangeogra.github.io8';
+      window.location.href = 'http://indiangeogra.github.io/8';
       });
     </script>
 
@@ -115,15 +115,15 @@
 	    <!-- I got these buttons from simplesharebuttons.com -->
 	    <div id="share-buttons">
 	      <!-- VK -->
-     	      <a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io" target="_blank">
+     	      <a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io/7" target="_blank">
         	<img src="https://indiangeogra.github.io/vk.png" alt="VK" />
     	      </a>
     	      <!-- Facebook -->
-    	      <a href="http://www.facebook.com/sharer.php?u=https://indiangeogra.github.io" target="_blank">
+    	      <a href="http://www.facebook.com/sharer.php?u=https://indiangeogra.github.io/7" target="_blank">
 		<img src="https://indiangeogra.github.io/facebook.png" alt="Facebook" />
 	      </a>
 	      <!-- Twitter -->
-	      <a href="https://twitter.com/share?url=https://indiangeogra.github.io&amp;text=indiangeogra&amp;hashtags=indiangeogra" target="_blank">
+	      <a href="https://twitter.com/share?url=https://indiangeogra.github.io/7&amp;text=indiangeogra&amp;hashtags=indiangeogra" target="_blank">
         	<img src="https://indiangeogra.github.io/twitter.png" alt="Twitter" />
     	      </a>
     	    </div>
