--- a/archive.html
+++ b/archive.html
@@ -68,8 +68,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="1/comic.png" data-lightbox="comic" data-title="Daria 2016"
-	     rel="lightbox[comic]">
+	     href="1/index.html">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 title="Daria 2016" alt="Daria 2016" />
@@ -79,8 +78,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее"
-	     rel="lightbox[comic]">
+	     href="2/index.html">
 	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
 			 width="140px;"
 			 title="Окололетнее" alt="Окололетнее" />
@@ -90,8 +88,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула"
-	     rel="lightbox[comic]">
+	     href="3/index.html">
 	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
 			 width="140px;"
 			 title="Ходячий замок Хаула" alt="Ходячий замок Хаула" />
@@ -101,8 +98,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="4/comic.png" data-lightbox="comic" data-title="А."
-	     rel="lightbox[comic]">
+	     href="4/index.html">
 	    	    <img src="https://indiangeogra.github.io/4/comic_lazy.png"
 			 width="140px;"
 			 title="А." alt="А." />
@@ -112,8 +108,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="5/comic.png" data-lightbox="comic" data-title="Случай в Мадриде"
-	     rel="lightbox[comic]">
+	     href="5/index.html">
 	    	    <img src="https://indiangeogra.github.io/5/comic_lazy.png"
 			 width="140px;"
 			 title="Случай в Мадриде" alt="Случай в Мадриде" />
@@ -123,8 +118,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="6/comic.png" data-lightbox="comic" data-title="По дороге"
-	     rel="lightbox[comic]">
+	     href="6/index.html">
 	    	    <img src="https://indiangeogra.github.io/6/comic_lazy.png"
 			 width="140px;"
 			 title="По дороге" alt="По дороге" />
@@ -134,8 +128,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="7/comic.png" data-lightbox="comic" data-title="Ведьма"
-	     rel="lightbox[comic]">
+	     href="7/index.html">
 	    	    <img src="https://indiangeogra.github.io/7/comic_lazy.png"
 			 width="140px;"
 			 title="Ведьма" alt="Ведьма" />
@@ -145,8 +138,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="8/comic.png" data-lightbox="comic" data-title="Фонари зажигаются"
-	     rel="lightbox[comic]">
+	     href="8/index.html">
 	    	    <img src="https://indiangeogra.github.io/8/comic_lazy.png"
 			 width="140px;"
 			 title="Фонари зажигаются" alt="Фонари зажигаются" />
@@ -156,8 +148,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="9/comic.png" data-lightbox="comic" data-title="Март"
-	     rel="lightbox[comic]">
+	     href="9/index.html">
 	    	    <img src="https://indiangeogra.github.io/9/comic_lazy.png"
 			 width="140px;"
 			 title="Март" alt="Март" />
@@ -167,8 +158,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="10/comic.png" data-lightbox="comic" data-title="Часы"
-	     rel="lightbox[comic]">
+	     href="10/index.html">
 	    	    <img src="https://indiangeogra.github.io/10/comic_lazy.png"
 			 width="140px;"
 			 title="Часы" alt="Часы" />
@@ -178,8 +168,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="11/comic.png" data-lightbox="comic" data-title="Городская геодезия"
-	     rel="lightbox[comic]">
+	     href="11/index.html">
 	    	    <img src="https://indiangeogra.github.io/11/comic_lazy.png"
 			 width="140px;"
 			 title="Городская геодезия" alt="Городская геодезия" />
@@ -189,8 +178,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="12/comic.png" data-lightbox="comic" data-title="На работу"
-	     rel="lightbox[comic]">
+	     href="12/index.html">
 	    	    <img src="https://indiangeogra.github.io/12/comic_lazy.png"
 			 width="140px;"
 			 title="На работу" alt="На работу" />
@@ -200,8 +188,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="13/comic.png" data-lightbox="comic" data-title="Друзья"
-	     rel="lightbox[comic]">
+	     href="13/index.html">
 	    	    <img src="https://indiangeogra.github.io/13/comic_lazy.png"
 			 width="140px;"
 			 title="Друзья" alt="Друзья" />
@@ -211,8 +198,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="14/comic.png" data-lightbox="comic" data-title="Рынок"
-	     rel="lightbox[comic]">
+	     href="14/index.html">
 	    	    <img src="https://indiangeogra.github.io/14/comic_lazy.png"
 			 width="140px;"
 			 title="Рынок" alt="Рынок" />
@@ -222,8 +208,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="15/comic.png" data-lightbox="comic" data-title="The Jerk"
-	     rel="lightbox[comic]">
+	     href="15/index.html">
 	    	    <img src="https://indiangeogra.github.io/15/comic_lazy.png"
 			 width="140px;"
 			 title="The Jerk" alt="The Jerk" />
@@ -233,8 +218,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="16/comic.png" data-lightbox="comic" data-title="В городе моем"
-	     rel="lightbox[comic]">
+	     href="16/index.html">
 	    	    <img src="https://indiangeogra.github.io/16/comic_lazy.png"
 			 width="140px;"
 			 title="В городе моем" alt="В городе моем" />
@@ -244,8 +228,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="17/comic.png" data-lightbox="comic" data-title="Ботинки, мечтающие о чашке чая"
-	     rel="lightbox[comic]">
+	     href="17/index.html">
 	    	    <img src="https://indiangeogra.github.io/17/comic_lazy.png"
 			 width="140px;"
 			 title="Ботинки, мечтающие о чашке чая" alt="Ботинки, мечтающие о чашке чая" />
@@ -255,8 +238,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="18/comic.png" data-lightbox="comic" data-title="Мумий Тролль"
-	     rel="lightbox[comic]">
+	     href="18/index.html">
 	    	    <img src="https://indiangeogra.github.io/18/comic_lazy.png"
 			 width="140px;"
 			 title="Мумий Тролль" alt="Мумий Тролль" />
@@ -266,8 +248,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="19/comic.png" data-lightbox="comic" data-title="Москва-река"
-	     rel="lightbox[comic]">
+	     href="19/index.html">
 	    	    <img src="https://indiangeogra.github.io/19/comic_lazy.png"
 			 width="140px;"
 			 title="Москва-река" alt="Москва-река" />
@@ -277,8 +258,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="20/comic.png" data-lightbox="comic" data-title="Зима уходит"
-	     rel="lightbox[comic]">
+	     href="20/index.html">
 	    	    <img src="https://indiangeogra.github.io/20/comic_lazy.png"
 			 width="140px;"
 			 title="Зима уходит" alt="Зима уходит" />
@@ -288,8 +268,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="21/comic.png" data-lightbox="comic" data-title="Meryl"
-	     rel="lightbox[comic]">
+	     href="21/index.html">
 	    	    <img src="https://indiangeogra.github.io/21/comic_lazy.png"
 			 width="140px;"
 			 title="Meryl" alt="Meryl" />
@@ -299,8 +278,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="22/comic.png" data-lightbox="comic" data-title="Флейтистка"
-	     rel="lightbox[comic]">
+	     href="22/index.html">
 	    	    <img src="https://indiangeogra.github.io/22/comic_lazy.png"
 			 width="140px;"
 			 title="Флейтистка" alt="Флейтистка" />
@@ -310,8 +288,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="23/comic.png" data-lightbox="comic" data-title="Китайская фантазия"
-	     rel="lightbox[comic]">
+	     href="23/index.html">
 	    	    <img src="https://indiangeogra.github.io/23/comic_lazy.png"
 			 width="140px;"
 			 title="Китайская фантазия" alt="Китайская фантазия" />
@@ -321,8 +298,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="24/comic.png" data-lightbox="comic" data-title="Размытый город"
-	     rel="lightbox[comic]">
+	     href="24/index.html">
 	    	    <img src="https://indiangeogra.github.io/24/comic_lazy.png"
 			 width="140px;"
 			 title="Размытый город" alt="Размытый город" />
@@ -332,8 +308,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="25/comic.png" data-lightbox="comic" data-title="Качели"
-	     rel="lightbox[comic]">
+	     href="25/index.html">
 	    	    <img src="https://indiangeogra.github.io/25/comic_lazy.png"
 			 width="140px;"
 			 title="Качели" alt="Качели" />
@@ -343,8 +318,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="26/comic.png" data-lightbox="comic" data-title="Средиземноморье"
-	     rel="lightbox[comic]">
+	     href="26/index.html">
 	    	    <img src="https://indiangeogra.github.io/26/comic_lazy.png"
 			 width="140px;"
 			 title="Средиземноморье" alt="Средиземноморье" />
@@ -354,8 +328,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="27/comic.png" data-lightbox="comic" data-title="Конец марта"
-	     rel="lightbox[comic]">
+	     href="27/index.html">
 	    	    <img src="https://indiangeogra.github.io/27/comic_lazy.png"
 			 width="140px;"
 			 title="Конец марта" alt="Конец марта" />
@@ -365,8 +338,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="28/comic.png" data-lightbox="comic" data-title="Depeche Mode"
-	     rel="lightbox[comic]">
+	     href="28/index.html">
 	    	    <img src="https://indiangeogra.github.io/28/comic_lazy.png"
 			 width="140px;"
 			 title="Depeche Mode" alt="Depeche Mode" />
@@ -376,8 +348,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="29/comic.png" data-lightbox="comic" data-title="До Драмтеатра"
-	     rel="lightbox[comic]">
+	     href="29/index.html">
 	    	    <img src="https://indiangeogra.github.io/29/comic_lazy.png"
 			 width="140px;"
 			 title="До Драмтеатра" alt="До Драмтеатра" />
@@ -387,8 +358,7 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
-	     href="30/comic.png" data-lightbox="comic" data-title="Мост"
-	     rel="lightbox[comic]">
+	     href="30/index.html">
 	    	    <img src="https://indiangeogra.github.io/30/comic_lazy.png"
 			 width="140px;"
 			 title="Мост" alt="Мост" />
