--- a/21/index.html
+++ b/21/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
     <link rel="stylesheet" type="text/js" href="https://fonts.googleapis.com/css?family=Forum">
 
+    <!-- fancybox -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://indiangeogra.github.io/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+        <script type="text/javascript" src="https://indiangeogra.github.io/fancybox/jquery.fancybox.pack.js"></script>
+
     <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
     <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
@@ -92,13 +97,13 @@
 	  </div>
 	  <div id="comic">
 	  <center>
-	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
+	    <a class="fancybox" style="display: inline; color: #303030; padding: 0px 0px 0px 0px;" title="Meryl"
 	       href="https://indiangeogra.github.io/21/comic.png">
 	      <img src="https://indiangeogra.github.io/21/comic_lazy.png"
-		   height="640px"
-		   data-src="https://indiangeogra.github.io/21/comic_small.png"
+		   height="640px">
+		   <!--data-src="https://indiangeogra.github.io/21/comic_small.png"
 		   class="lazyload blur-up"
-		   title="160311" alt="Meryl " class="lazyload no-src" />
+		   title="160311" alt="Meryl " class="lazyload no-src" />-->
 	    </a>
 	  </center>
 	  </div>
