--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
     <link rel="stylesheet" type="text/js" href="https://fonts.googleapis.com/css?family=Forum">
 
+    <!-- fancybox -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://indiangeogra.github.io/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+        <script type="text/javascript" src="https://indiangeogra.github.io/fancybox/jquery.fancybox.pack.js"></script>
+
     <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
     <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
@@ -87,18 +92,18 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../29/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li "padding: 12px 8px 12px 8px;"> Сюда &gt; </li>
-	    <li "padding: 12px 8px 12px 8px;"> &gt; &gt; </li>
+	    <li> Сюда &gt; </li>
+	    <li> &gt; &gt; </li>
 	  </div>
 	  <div id="comic">
 	  <center>
-	    <a style="display: inline; color: #303030; padding: 0px 0px 0px 0px;"
+	    <a class="fancybox" style="display: inline; color: #303030; padding: 0px 0px 0px 0px;" title="Мост"
 	       href="https://indiangeogra.github.io/30/comic.png">
 	      <img src="https://indiangeogra.github.io/30/comic_lazy.png"
-		   width="620px"
-		   data-src="https://indiangeogra.github.io/30/comic_small.png"
+		   width="620px">
+		   <!--data-src="https://indiangeogra.github.io/30/comic_small.png"
 		   class="lazyload blur-up"
-		   title="160325" alt="Мост " class="lazyload no-src" />
+		   title="160325" alt="Мост " class="lazyload no-src" />-->
 	    </a>
 	  </center>
 	  </div>
@@ -106,8 +111,8 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../29/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li "padding: 12px 8px 12px 8px;"> Сюда &gt; </li>
-	    <li "padding: 12px 8px 12px 8px;"> &gt; &gt; </li>
+	    <li> Сюда &gt; </li>
+	    <li> &gt; &gt; </li>
 	  </div>
 	  <br />
 
