--- a/32/index.html
+++ b/32/index.html
@@ -208,7 +208,7 @@
 
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = 'http://indiangeogra.github.io/32';
+      window.location.href = 'http://indiangeogra.github.io/31';
       });
       shortcut.add("Right",function() {
       window.location.href = 'http://indiangeogra.github.io/33';
@@ -242,7 +242,7 @@
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Конец апреля</title>
+    <title>indian geogra: Даль</title>
     
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -277,35 +277,35 @@
 
 
           <div id="ComicTitle">
-	    Конец апреля
+	    Даль
 	  </div>
 
 
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../32/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../31/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li> Сюда &gt; </li>
-	    <li> &gt; &gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../33/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	  <center>
-	    <a class="fancybox"  title="Конец апреля"
-	       href="https://indiangeogra.github.io/33/comic.png">
-	      <img src="https://indiangeogra.github.io/33/comic_lazy.png"
-		   height="640px"
-		   data-src="https://indiangeogra.github.io/33/comic_small.png"
+	    <a class="fancybox"  title="Даль"
+	       href="https://indiangeogra.github.io/32/comic.png">
+	      <img src="https://indiangeogra.github.io/32/comic_lazy.png"
+		   width="620px"
+		   data-src="https://indiangeogra.github.io/32/comic_small.png"
 		   class="lazyload blur-up"
-		   title="150416" alt="Конец апреля " class="lazyload no-src" />
+		   title="****13" alt="Даль " class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../32/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../31/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li> Сюда &gt; </li>
-	    <li> &gt; &gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../33/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
 
@@ -313,15 +313,15 @@
 	    <!-- I got these buttons from simplesharebuttons.com -->
 	    <div id="share-buttons">
 	      <!-- VK -->
-     	      <a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io/33" target="_blank">
+     	      <a href="http://vkontakte.ru/share.php?url=https://indiangeogra.github.io/32" target="_blank">
         	<img src="https://indiangeogra.github.io/vk.png" alt="VK" />
     	      </a>
     	      <!-- Facebook -->
-    	      <a href="http://www.facebook.com/sharer.php?u=https://indiangeogra.github.io/33" target="_blank">
+    	      <a href="http://www.facebook.com/sharer.php?u=https://indiangeogra.github.io/32" target="_blank">
 		<img src="https://indiangeogra.github.io/facebook.png" alt="Facebook" />
 	      </a>
 	      <!-- Twitter -->
-	      <a href="https://twitter.com/share?url=https://indiangeogra.github.io/33&amp;text=indiangeogra&amp;hashtags=indiangeogra" target="_blank">
+	      <a href="https://twitter.com/share?url=https://indiangeogra.github.io/32&amp;text=indiangeogra&amp;hashtags=indiangeogra" target="_blank">
         	<img src="https://indiangeogra.github.io/twitter.png" alt="Twitter" />
     	      </a>
     	    </div>
@@ -341,8 +341,8 @@
 	    <center>
 	      <br />
 	      <div style="color: #333">
-		Сослать в наш красный уголок: http://indiangeogra.github.io/33/index.html<br />
-		Стянуть картинку: http://indiangeogra.github.io/33/comic.png
+		Сослать в наш красный уголок: http://indiangeogra.github.io/32/index.html<br />
+		Стянуть картинку: http://indiangeogra.github.io/32/comic.png
 	      </div>
 	    </center>
           </footer>
