--- a/archive.html
+++ b/archive.html
@@ -365,6 +365,36 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="31/index.html">
+	    	    <img src="https://indiangeogra.github.io/31/comic_lazy.png"
+			 width="140px;"
+			 title="В подворотне" alt="В подворотне" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="32/index.html">
+	    	    <img src="https://indiangeogra.github.io/32/comic_lazy.png"
+			 width="140px;"
+			 title="Даль" alt="Даль" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="33/index.html">
+	    	    <img src="https://indiangeogra.github.io/33/comic_lazy.png"
+			 width="140px;"
+			 title="Конец апреля" alt="Конец апреля" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
