--- a/archive.html
+++ b/archive.html
@@ -395,6 +395,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="34/index.html">
+	    	    <img src="https://indiangeogra.github.io/34/comic_lazy.png"
+			 width="140px;"
+			 title="Караоке" alt="Караоке" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
