--- a/archive.html
+++ b/archive.html
@@ -405,6 +405,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="35/index.html">
+	    	    <img src="https://indiangeogra.github.io/35/comic_lazy.png"
+			 width="140px;"
+			 title="Улитка на склоне Фудзи" alt="Улитка на склоне Фудзи" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
