--- a/archive.html
+++ b/archive.html
@@ -415,6 +415,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="36/index.html">
+	    	    <img src="https://indiangeogra.github.io/36/comic_lazy.png"
+			 width="140px;"
+			 title="Дачный уголок" alt="Дачный уголок" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
