--- a/36/index.html
+++ b/36/index.html
@@ -211,7 +211,7 @@
       window.location.href = 'http://indiangeogra.github.io/35';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'http://indiangeogra.github.io/36';
+      window.location.href = 'http://indiangeogra.github.io/37';
       });
     </script>
 
@@ -285,8 +285,8 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../35/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li> Сюда &gt; </li>
-	    <li> &gt;&gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../37/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	  <center>
@@ -304,8 +304,8 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../35/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li> Сюда &gt; </li>
-	    <li> &gt;&gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../37/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
 
