--- a/archive.html
+++ b/archive.html
@@ -425,6 +425,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="37/index.html">
+	    	    <img src="https://indiangeogra.github.io/37/comic_lazy.png"
+			 width="140px;"
+			 title="Дерево" alt="Дерево" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
