--- a/archive.html
+++ b/archive.html
@@ -445,6 +445,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+
+          <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="38/index.html">
+	    	    <img src="https://indiangeogra.github.io/38/comic_lazy.png"
+			 width="140px;"
+			 title="Китайская фантазия II" alt="Китайская фантазия II" />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 	  <!-- ig271828_archive -->
 
 	  <hr>
