--- a/38/index.html
+++ b/38/index.html
@@ -211,7 +211,7 @@
       window.location.href = 'http://indiangeogra.github.io/37';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'http://indiangeogra.github.io/38';
+      window.location.href = 'http://indiangeogra.github.io/39';
       });
     </script>
 
@@ -242,7 +242,7 @@
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Китайская фантазия II</title>
+    <title>indian geogra: Метеобудка</title>
     
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -277,7 +277,7 @@
 
 
           <div id="ComicTitle">
-	    Китайская фантазия II
+	    Метеобудка
 	  </div>
 
 
@@ -285,18 +285,18 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../37/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../38/" accesskey="n">Сюда &gt;</a></li>
-	    <li> &gt;&gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../39/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	  <center>
-	    <a class="fancybox"  title="Китайская фантазия II"
+	    <a class="fancybox"  title="Метеобудка"
 	       href="https://indiangeogra.github.io/38/comic.png">
 	      <img src="https://indiangeogra.github.io/38/comic_lazy.png"
 		   height="640px"
 		   data-src="https://indiangeogra.github.io/38/comic_small.png"
 		   class="lazyload blur-up"
-		   title="060816" alt="Китайская фантазия II " class="lazyload no-src" />
+		   title="290616" alt="Метеобудка " class="lazyload no-src" />
 	    </a>
 	  </center>
 	  </div>
@@ -304,8 +304,8 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../37/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../38/" accesskey="n">Сюда &gt;</a></li>
-	    <li> &gt;&gt; </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../39/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <br />
 
